--- a/index.html
+++ b/index.html
@@ -14,13 +14,39 @@
 
         body { font-family: Arial, sans-serif; margin: 0; background: var(--bg-gray); color: #333; overflow-x: hidden; }
         
-        /* View Mode Fixes for iOS/Android - Removed white space after button */
+        /* View Mode Fixes - Forced collapse of bottom spacing */
         .view-mode .header, .view-mode .form-side { display: none !important; }
         .view-mode { background: white; }
-        .view-mode .main-container { height: auto; min-height: 100vh; padding: 0; margin: 0; display: block; background: white; }
-        .view-mode .preview-side { width: 100%; padding: 0; height: auto; align-items: flex-start; }
-        .view-mode .phone-mockup { width: 100%; max-width: 100%; height: auto; border-radius: 0; box-shadow: none; position: relative; top: 0; }
-        .view-mode .add-btn { margin-top: 40px; padding-bottom: calc(20px + env(safe-area-inset-bottom)); }
+        .view-mode .main-container { 
+            height: auto; 
+            min-height: unset; 
+            padding: 0; 
+            margin: 0; 
+            display: block; 
+            background: white; 
+        }
+        .view-mode .preview-side { 
+            width: 100%; 
+            padding: 0; 
+            height: auto; 
+            display: block; 
+        }
+        .view-mode .phone-mockup { 
+            width: 100%; 
+            max-width: 100%; 
+            height: auto; 
+            min-height: unset;
+            border-radius: 0; 
+            box-shadow: none; 
+            position: relative; 
+            top: 0; 
+            display: block;
+        }
+        .view-mode .add-btn { 
+            margin-top: 40px; 
+            margin-bottom: 0;
+            padding-bottom: calc(20px + env(safe-area-inset-bottom)); 
+        }
 
         .header { background: white; padding: 15px 50px; box-shadow: 0 2px 10px rgba(0,0,0,0.05); font-weight: bold; }
         .main-container { display: flex; height: calc(100vh - 70px); max-width: 1400px; margin: 0 auto; gap: 30px; padding: 20px; box-sizing: border-box; }
