--- a/index.html
+++ b/index.html
@@ -14,37 +14,41 @@
 
         body { font-family: Arial, sans-serif; margin: 0; background: var(--bg-gray); color: #333; overflow-x: hidden; }
         
-        /* View Mode Fixes - Forced collapse of bottom spacing */
+        /* View Mode Hard Fix - Eliminates bottom scroll/space */
+        .view-mode, .view-mode body { 
+            height: 100%; 
+            overflow: hidden !important; 
+            background: white; 
+        }
         .view-mode .header, .view-mode .form-side { display: none !important; }
-        .view-mode { background: white; }
         .view-mode .main-container { 
-            height: auto; 
-            min-height: unset; 
+            height: 100%; 
             padding: 0; 
             margin: 0; 
-            display: block; 
+            display: flex;
+            flex-direction: column;
             background: white; 
         }
         .view-mode .preview-side { 
             width: 100%; 
             padding: 0; 
-            height: auto; 
-            display: block; 
+            height: 100%; 
+            display: flex;
         }
         .view-mode .phone-mockup { 
             width: 100%; 
             max-width: 100%; 
-            height: auto; 
-            min-height: unset;
+            height: 100%; 
             border-radius: 0; 
             box-shadow: none; 
             position: relative; 
             top: 0; 
-            display: block;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between; /* Pushes button to the very bottom */
         }
         .view-mode .add-btn { 
-            margin-top: 40px; 
-            margin-bottom: 0;
+            margin-top: auto; /* Ensures it stays at the bottom of the container */
             padding-bottom: calc(20px + env(safe-area-inset-bottom)); 
         }
 
@@ -154,7 +158,7 @@
 
     <div class="preview-side">
         <div class="phone-mockup">
-            <div id="vc-view" class="no-photo" style="display: flex; flex-direction: column;">
+            <div id="vc-view" class="no-photo" style="display: flex; flex-direction: column; flex-grow: 1;">
                 <div class="card-header"><img src="Quadrangle.svg" id="display-logo" class="card-logo"></div>
                 <div class="profile-container" id="profile-cont"><img id="main-profile-pic" src="" class="profile-main"></div>
                 <div class="card-content">
@@ -182,6 +186,7 @@
 </div>
 
 <script>
+    // ... rest of the script is exactly the same ...
     const BRANDS = {
         quadrangle: { color: '#a31212', logo: 'Quadrangle.svg', logoWidth: '160px' },
         naukri: { color: '#1f70e0', logo: 'Naukri.svg', logoWidth: '160px' },
