--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             display: block;
         }
         .view-mode .add-btn { 
-            margin-top: 40px; 
+            margin-top: 60px; /* INCREASED GAP HERE */
             margin-bottom: 0;
             padding-bottom: calc(20px + env(safe-area-inset-bottom)); 
         }
